commit bilingual contents

--- a/docs/visual-basic/misc/bc30004.md
+++ b/docs/visual-basic/misc/bc30004.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30004
 ms.assetid: 592fb00e-7c4a-4d0b-84bf-a844296925dd
-ms.openlocfilehash: 81a931965ccdc8e20ce2f52705ec73499ad6ffa2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e7be85592dc368ba5382db5064bba0c4353332e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64650676"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84382068"
 ---
-# <a name="character-constant-must-contain-exactly-one-character"></a><span data-ttu-id="6f998-102">La costante carattere deve contenere esattamente un carattere</span><span class="sxs-lookup"><span data-stu-id="6f998-102">Character constant must contain exactly one character</span></span>
-<span data-ttu-id="6f998-103">Una costante carattere non è valida perché contiene più di un carattere o un carattere null (tutti i bit sono zero).</span><span class="sxs-lookup"><span data-stu-id="6f998-103">A character constant is not valid because either it contains more than one character or is a null character (all bits are zero).</span></span>  
+# <a name="character-constant-must-contain-exactly-one-character"></a><span data-ttu-id="6997e-102">La costante carattere deve contenere esattamente un carattere</span><span class="sxs-lookup"><span data-stu-id="6997e-102">Character constant must contain exactly one character</span></span>
+<span data-ttu-id="6997e-103">Una costante carattere non è valida perché contiene più di un carattere o un carattere null (tutti i bit sono zero).</span><span class="sxs-lookup"><span data-stu-id="6997e-103">A character constant is not valid because either it contains more than one character or is a null character (all bits are zero).</span></span>  
   
- <span data-ttu-id="6f998-104">**ID errore:** BC30004</span><span class="sxs-lookup"><span data-stu-id="6f998-104">**Error ID:** BC30004</span></span>  
+ <span data-ttu-id="6997e-104">**ID errore:** BC30004</span><span class="sxs-lookup"><span data-stu-id="6997e-104">**Error ID:** BC30004</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6f998-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6f998-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6997e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6997e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="6f998-106">Modificare la costante carattere in un singolo carattere o il carattere null in un carattere valido.</span><span class="sxs-lookup"><span data-stu-id="6f998-106">Change the character constant to a single character or change the null character to a valid character.</span></span>  
+- <span data-ttu-id="6997e-106">Modificare la costante carattere in un singolo carattere o il carattere null in un carattere valido.</span><span class="sxs-lookup"><span data-stu-id="6997e-106">Change the character constant to a single character or change the null character to a valid character.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6f998-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6f998-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6997e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6997e-107">See also</span></span>
 
-- [<span data-ttu-id="6f998-108">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="6f998-108">Char Data Type</span></span>](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [<span data-ttu-id="6997e-108">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="6997e-108">Char Data Type</span></span>](../language-reference/data-types/char-data-type.md)
