--- a/docs/visual-basic/misc/bc33008.md
+++ b/docs/visual-basic/misc/bc33008.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC33008
 ms.assetid: 8c44456b-8fd2-4168-ad8c-b6da129242ba
-ms.openlocfilehash: fa76e4a9db465e5ed9662eecdc14c9e6bc596910
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d28f3ee0c7cd13d5e61e7a759df8a5c87c584eb8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657080"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385236"
 ---
-# <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a><span data-ttu-id="dc71d-103">'Exit Operator' non è valido.</span><span class="sxs-lookup"><span data-stu-id="dc71d-103">'Exit Operator' is not valid.</span></span> <span data-ttu-id="dc71d-104">Usare 'Return' per uscire da un operatore</span><span class="sxs-lookup"><span data-stu-id="dc71d-104">Use 'Return' to exit an Operator</span></span>
-<span data-ttu-id="dc71d-105">Un'istruzione `Exit Operator` viene visualizzata in una routine `Operator` .</span><span class="sxs-lookup"><span data-stu-id="dc71d-105">An `Exit Operator` statement appears in an `Operator` procedure.</span></span>  
+# <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a><span data-ttu-id="4aa42-103">'Exit Operator' non è valido.</span><span class="sxs-lookup"><span data-stu-id="4aa42-103">'Exit Operator' is not valid.</span></span> <span data-ttu-id="4aa42-104">Usare 'Return' per uscire da un operatore</span><span class="sxs-lookup"><span data-stu-id="4aa42-104">Use 'Return' to exit an Operator</span></span>
+<span data-ttu-id="4aa42-105">Un'istruzione `Exit Operator` viene visualizzata in una routine `Operator` .</span><span class="sxs-lookup"><span data-stu-id="4aa42-105">An `Exit Operator` statement appears in an `Operator` procedure.</span></span>  
   
- <span data-ttu-id="dc71d-106">È necessario usare una [istruzione Return](../../visual-basic/language-reference/statements/return-statement.md) da restituire da un `Operator` procedure.</span><span class="sxs-lookup"><span data-stu-id="dc71d-106">You must use a [Return Statement](../../visual-basic/language-reference/statements/return-statement.md) to return from an `Operator` procedure.</span></span> <span data-ttu-id="dc71d-107">Il [istruzione Exit](../../visual-basic/language-reference/statements/exit-statement.md) non accetta il `Operator` parola chiave e il `End Operator` istruzione non restituisce il controllo al codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="dc71d-107">The [Exit Statement](../../visual-basic/language-reference/statements/exit-statement.md) does not accept the `Operator` keyword, and the `End Operator` statement does not return control to the calling code.</span></span>  
+ <span data-ttu-id="4aa42-106">Per restituire una routine, è necessario utilizzare un' [istruzione return](../language-reference/statements/return-statement.md) `Operator` .</span><span class="sxs-lookup"><span data-stu-id="4aa42-106">You must use a [Return Statement](../language-reference/statements/return-statement.md) to return from an `Operator` procedure.</span></span> <span data-ttu-id="4aa42-107">L' [istruzione Exit](../language-reference/statements/exit-statement.md) non accetta la `Operator` parola chiave e l' `End Operator` istruzione non restituisce il controllo al codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="4aa42-107">The [Exit Statement](../language-reference/statements/exit-statement.md) does not accept the `Operator` keyword, and the `End Operator` statement does not return control to the calling code.</span></span>  
   
- <span data-ttu-id="dc71d-108">**ID errore:** BC33008</span><span class="sxs-lookup"><span data-stu-id="dc71d-108">**Error ID:** BC33008</span></span>  
+ <span data-ttu-id="4aa42-108">**ID errore:** BC33008</span><span class="sxs-lookup"><span data-stu-id="4aa42-108">**Error ID:** BC33008</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dc71d-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dc71d-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4aa42-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4aa42-109">To correct this error</span></span>  
   
-- <span data-ttu-id="dc71d-110">Sostituire l'istruzione `Exit Operator` con un'istruzione `Return` .</span><span class="sxs-lookup"><span data-stu-id="dc71d-110">Replace the `Exit Operator` statement with a `Return` statement.</span></span>  
+- <span data-ttu-id="4aa42-110">Sostituire l'istruzione `Exit Operator` con un'istruzione `Return` .</span><span class="sxs-lookup"><span data-stu-id="4aa42-110">Replace the `Exit Operator` statement with a `Return` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dc71d-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dc71d-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4aa42-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4aa42-111">See also</span></span>
 
-- [<span data-ttu-id="dc71d-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="dc71d-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="dc71d-113">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="dc71d-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="dc71d-114">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="dc71d-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="dc71d-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="dc71d-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="4aa42-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="4aa42-112">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="4aa42-113">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="4aa42-113">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="4aa42-114">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="4aa42-114">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="4aa42-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="4aa42-115">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
