--- a/docs/visual-basic/misc/bc40019.md
+++ b/docs/visual-basic/misc/bc40019.md
@@ -1,5 +1,5 @@
 ---
-title: "«<keyword>'della funzione di accesso di'<propertyname>' è obsoleto: '<errormessage>' (avviso di Visual Basic)"
+title: <keyword>la funzione di accesso '' di ' <propertyname> ' è obsoleta:' <errormessage> ' (Visual Basic avviso)
 ms.date: 07/20/2015
 f1_keywords:
 - bc40019
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC40019
 ms.assetid: 57d00655-1837-4605-a5e9-1ae5b6935f51
-ms.openlocfilehash: 7e20af89f4da3b5abf2a84026ab010311a77fe18
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: dd49f3f1f0094e866d5a690d29574e48deb635ac
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794238"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384443"
 ---
-# <a name="keyword-accessor-of-propertyname-is-obsolete-errormessage-visual-basic-warning"></a><span data-ttu-id="1bc03-102">'\<parola chiave >' della funzione di accesso di '\<NomeProprietà >' è obsoleto: '\<errormessage >' (avviso di Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1bc03-102">'\<keyword>' accessor of '\<propertyname>' is obsolete: '\<errormessage>' (Visual Basic Warning)</span></span>
-<span data-ttu-id="1bc03-103">Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corrispondente è stata contrassegnata con l'attributo <xref:System.ObsoleteAttribute> e la direttiva di considerarla come un avviso.</span><span class="sxs-lookup"><span data-stu-id="1bc03-103">A statement attempts to read or write a property for which the corresponding procedure has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
+# <a name="keyword-accessor-of-propertyname-is-obsolete-errormessage-visual-basic-warning"></a><span data-ttu-id="dee40-102">\<keyword>la funzione di accesso '' di ' \<propertyname> ' è obsoleta:' \<errormessage> ' (Visual Basic avviso)</span><span class="sxs-lookup"><span data-stu-id="dee40-102">'\<keyword>' accessor of '\<propertyname>' is obsolete: '\<errormessage>' (Visual Basic Warning)</span></span>
+<span data-ttu-id="dee40-103">Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corrispondente è stata contrassegnata con l'attributo <xref:System.ObsoleteAttribute> e la direttiva di considerarla come un avviso.</span><span class="sxs-lookup"><span data-stu-id="dee40-103">A statement attempts to read or write a property for which the corresponding procedure has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
   
- <span data-ttu-id="1bc03-104">È possibile contrassegnare qualsiasi elemento di programmazione come non più in uso applicando <xref:System.ObsoleteAttribute> a tale elemento.</span><span class="sxs-lookup"><span data-stu-id="1bc03-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="1bc03-105">In questo caso, è possibile impostare la proprietà <xref:System.ObsoleteAttribute.IsError%2A> dell'attributo su `True` o `False`.</span><span class="sxs-lookup"><span data-stu-id="1bc03-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="1bc03-106">Se si imposta la proprietà su `True`, il compilatore considera il tentativo di usare l'elemento come un errore.</span><span class="sxs-lookup"><span data-stu-id="1bc03-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="1bc03-107">Se si imposta la proprietà su `False`, o si lascia l'impostazione predefinita `False`, il compilatore genera un avviso se si prova a usare l'elemento.</span><span class="sxs-lookup"><span data-stu-id="1bc03-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
+ <span data-ttu-id="dee40-104">È possibile contrassegnare qualsiasi elemento di programmazione come non più in uso applicando <xref:System.ObsoleteAttribute> a tale elemento.</span><span class="sxs-lookup"><span data-stu-id="dee40-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="dee40-105">In questo caso, è possibile impostare la proprietà <xref:System.ObsoleteAttribute.IsError%2A> dell'attributo su `True` o `False`.</span><span class="sxs-lookup"><span data-stu-id="dee40-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="dee40-106">Se si imposta la proprietà su `True`, il compilatore considera il tentativo di usare l'elemento come un errore.</span><span class="sxs-lookup"><span data-stu-id="dee40-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="dee40-107">Se si imposta la proprietà su `False`, o si lascia l'impostazione predefinita `False`, il compilatore genera un avviso se si prova a usare l'elemento.</span><span class="sxs-lookup"><span data-stu-id="dee40-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
   
- <span data-ttu-id="1bc03-108">Per impostazione predefinita, si tratta di un messaggio di avviso perché la proprietà <xref:System.ObsoleteAttribute.IsError%2A> di <xref:System.ObsoleteAttribute> è `False`.</span><span class="sxs-lookup"><span data-stu-id="1bc03-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="1bc03-109">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="1bc03-109">For more information on hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="dee40-108">Per impostazione predefinita, si tratta di un messaggio di avviso perché la proprietà <xref:System.ObsoleteAttribute.IsError%2A> di <xref:System.ObsoleteAttribute> è `False`.</span><span class="sxs-lookup"><span data-stu-id="dee40-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="dee40-109">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="dee40-109">For more information on hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="1bc03-110">**ID errore:** BC40019</span><span class="sxs-lookup"><span data-stu-id="1bc03-110">**Error ID:** BC40019</span></span>  
+ <span data-ttu-id="dee40-110">**ID errore:** BC40019</span><span class="sxs-lookup"><span data-stu-id="dee40-110">**Error ID:** BC40019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1bc03-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1bc03-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dee40-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dee40-111">To correct this error</span></span>  
   
-1. <span data-ttu-id="1bc03-112">Esaminare il messaggio di errore tra virgolette e intraprendere l'azione appropriata.</span><span class="sxs-lookup"><span data-stu-id="1bc03-112">Examine the quoted error message and take appropriate action.</span></span>  
+1. <span data-ttu-id="dee40-112">Esaminare il messaggio di errore tra virgolette e intraprendere l'azione appropriata.</span><span class="sxs-lookup"><span data-stu-id="dee40-112">Examine the quoted error message and take appropriate action.</span></span>  
   
-2. <span data-ttu-id="1bc03-113">Verificare che nel riferimento del codice sorgente il nome della proprietà sia stato digitato correttamente.</span><span class="sxs-lookup"><span data-stu-id="1bc03-113">Ensure that the source-code reference is spelling the property name correctly.</span></span>  
+2. <span data-ttu-id="dee40-113">Verificare che nel riferimento del codice sorgente il nome della proprietà sia stato digitato correttamente.</span><span class="sxs-lookup"><span data-stu-id="dee40-113">Ensure that the source-code reference is spelling the property name correctly.</span></span>  
   
-3. <span data-ttu-id="1bc03-114">Evitare l'accesso alla proprietà nel modo (lettura o scrittura) che ha generato questo messaggio.</span><span class="sxs-lookup"><span data-stu-id="1bc03-114">Avoid accessing the property in the way (reading or writing) that generated this message.</span></span>  
+3. <span data-ttu-id="dee40-114">Evitare l'accesso alla proprietà nel modo (lettura o scrittura) che ha generato questo messaggio.</span><span class="sxs-lookup"><span data-stu-id="dee40-114">Avoid accessing the property in the way (reading or writing) that generated this message.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1bc03-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1bc03-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dee40-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dee40-115">See also</span></span>
 
-- [<span data-ttu-id="1bc03-116">Routine Property</span><span class="sxs-lookup"><span data-stu-id="1bc03-116">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="dee40-116">Routine Property</span><span class="sxs-lookup"><span data-stu-id="dee40-116">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
