--- a/docs/visual-basic/misc/bc40038.md
+++ b/docs/visual-basic/misc/bc40038.md
@@ -1,5 +1,5 @@
 ---
-title: '@No__t_0 dello spazio dei nomi radice non è conforme a CLS'
+title: Lo spazio dei nomi radice <namespacename> non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40038
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC40038
 ms.assetid: ec850295-b2fe-4f19-b808-d22fe0aaa32d
-ms.openlocfilehash: 90ead358cf9b32e2b2348ca45afa57da7d33c5e6
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: be640bfc5309d66d36f7cd05fa722b52dc49e5cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72769910"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384170"
 ---
-# <a name="root-namespace-namespacename-is-not-cls-compliant"></a><span data-ttu-id="f056b-102">Lo spazio dei nomi radice \<namespacename > non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="f056b-102">Root namespace \<namespacename> is not CLS-compliant</span></span>
-<span data-ttu-id="f056b-103">Un assembly è contrassegnato come `<CLSCompliant(True)>`, ma il nome dello spazio dei nomi radice inizia con un carattere di sottolineatura (`_`).</span><span class="sxs-lookup"><span data-stu-id="f056b-103">An assembly is marked as `<CLSCompliant(True)>`, but the root namespace name begins with an underscore (`_`).</span></span>  
+# <a name="root-namespace-namespacename-is-not-cls-compliant"></a><span data-ttu-id="4d5be-102">Lo spazio dei nomi radice \<namespacename> non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="4d5be-102">Root namespace \<namespacename> is not CLS-compliant</span></span>
+<span data-ttu-id="4d5be-103">Un assembly è contrassegnato come `<CLSCompliant(True)>`, ma il nome dello spazio dei nomi radice inizia con un carattere di sottolineatura (`_`).</span><span class="sxs-lookup"><span data-stu-id="4d5be-103">An assembly is marked as `<CLSCompliant(True)>`, but the root namespace name begins with an underscore (`_`).</span></span>  
   
- <span data-ttu-id="f056b-104">Un elemento di programmazione può contenere uno o più caratteri di sottolineatura, ma deve essere conforme all' [indipendenza del linguaggio e ai componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), non deve iniziare con un carattere di sottolineatura.</span><span class="sxs-lookup"><span data-stu-id="f056b-104">A programming element can contain one or more underscores, but to be compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), it must not begin with an underscore.</span></span> <span data-ttu-id="f056b-105">Vedere [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md).</span><span class="sxs-lookup"><span data-stu-id="f056b-105">See [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md).</span></span>  
+ <span data-ttu-id="4d5be-104">Un elemento di programmazione può contenere uno o più caratteri di sottolineatura, ma deve essere conforme all' [indipendenza del linguaggio e ai componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), non deve iniziare con un carattere di sottolineatura.</span><span class="sxs-lookup"><span data-stu-id="4d5be-104">A programming element can contain one or more underscores, but to be compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), it must not begin with an underscore.</span></span> <span data-ttu-id="4d5be-105">Vedere [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md).</span><span class="sxs-lookup"><span data-stu-id="4d5be-105">See [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md).</span></span>  
   
- <span data-ttu-id="f056b-106">Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="f056b-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="f056b-107">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="f056b-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="4d5be-106">Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="4d5be-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="4d5be-107">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="4d5be-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="f056b-108">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="f056b-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="4d5be-108">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="4d5be-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="f056b-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="f056b-109">By default, this message is a warning.</span></span> <span data-ttu-id="f056b-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="f056b-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="4d5be-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="4d5be-109">By default, this message is a warning.</span></span> <span data-ttu-id="4d5be-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="4d5be-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="f056b-111">**ID errore:** BC40038</span><span class="sxs-lookup"><span data-stu-id="f056b-111">**Error ID:** BC40038</span></span>  
+ <span data-ttu-id="4d5be-111">**ID errore:** BC40038</span><span class="sxs-lookup"><span data-stu-id="4d5be-111">**Error ID:** BC40038</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f056b-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f056b-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4d5be-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4d5be-112">To correct this error</span></span>  
   
-- <span data-ttu-id="f056b-113">Per la conformità con CLS, modificare il nome dello spazio dei nomi radice in modo che non inizi con un carattere di sottolineatura.</span><span class="sxs-lookup"><span data-stu-id="f056b-113">If you require CLS compliance, change the root namespace name so that it does not begin with an underscore.</span></span>  
+- <span data-ttu-id="4d5be-113">Per la conformità con CLS, modificare il nome dello spazio dei nomi radice in modo che non inizi con un carattere di sottolineatura.</span><span class="sxs-lookup"><span data-stu-id="4d5be-113">If you require CLS compliance, change the root namespace name so that it does not begin with an underscore.</span></span>  
   
-- <span data-ttu-id="f056b-114">Se è necessario lasciare invariato il nome dello spazio dei nomi radice, rimuovere <xref:System.CLSCompliantAttribute> dall'assembly o contrassegnarlo come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="f056b-114">If you require that the root namespace name remain unchanged, then remove the <xref:System.CLSCompliantAttribute> from the assembly or mark it as `<CLSCompliant(False)>`.</span></span>  
+- <span data-ttu-id="4d5be-114">Se è necessario lasciare invariato il nome dello spazio dei nomi radice, rimuovere <xref:System.CLSCompliantAttribute> dall'assembly o contrassegnarlo come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="4d5be-114">If you require that the root namespace name remain unchanged, then remove the <xref:System.CLSCompliantAttribute> from the assembly or mark it as `<CLSCompliant(False)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f056b-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f056b-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4d5be-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4d5be-115">See also</span></span>
 
-- [<span data-ttu-id="f056b-116">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="f056b-116">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [<span data-ttu-id="f056b-117">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f056b-117">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [<span data-ttu-id="f056b-118">-rootnamespace</span><span class="sxs-lookup"><span data-stu-id="f056b-118">-rootnamespace</span></span>](../../visual-basic/reference/command-line-compiler/rootnamespace.md)
-- [<span data-ttu-id="f056b-119">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="f056b-119">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [<span data-ttu-id="f056b-120">Convenzioni di denominazione Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f056b-120">Visual Basic Naming Conventions</span></span>](../../visual-basic/programming-guide/program-structure/naming-conventions.md)
+- [<span data-ttu-id="4d5be-116">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="4d5be-116">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="4d5be-117">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4d5be-117">Namespaces in Visual Basic</span></span>](../programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="4d5be-118">-rootnamespace</span><span class="sxs-lookup"><span data-stu-id="4d5be-118">-rootnamespace</span></span>](../reference/command-line-compiler/rootnamespace.md)
+- [<span data-ttu-id="4d5be-119">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="4d5be-119">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="4d5be-120">Convenzioni di denominazione di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4d5be-120">Visual Basic Naming Conventions</span></span>](../programming-guide/program-structure/naming-conventions.md)
