--- a/docs/visual-basic/misc/bc42016.md
+++ b/docs/visual-basic/misc/bc42016.md
@@ -1,5 +1,5 @@
 ---
-title: La conversione implicita da '<typename1>'a'<typename2>'
+title: Conversione implicita da' <typename1> ' a' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42016
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42016
 ms.assetid: 7dabaab0-8258-4c17-927f-28e61f50bd3a
-ms.openlocfilehash: 8682a511bf0510b81299a0ac6f27160f424ece18
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 26e413146641d6e1b17ec715aba6bd1bfaf9ea9d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384066"
 ---
-# <a name="implicit-conversion-from-typename1-to-typename2"></a><span data-ttu-id="5859c-102">La conversione implicita da '\<NomeTipo1 >' a '\<in NomeTipo2 >'</span><span class="sxs-lookup"><span data-stu-id="5859c-102">Implicit conversion from '\<typename1>' to '\<typename2>'</span></span>
-<span data-ttu-id="5859c-103">Un'espressione o un'istruzione di assegnazione accetta un valore di un tipo di dati e lo converte in un altro tipo.</span><span class="sxs-lookup"><span data-stu-id="5859c-103">An expression or an assignment statement takes a value of one data type and converts it to another type.</span></span> <span data-ttu-id="5859c-104">Dato che non viene usata alcuna parola chiave, la conversione è *implicita*.</span><span class="sxs-lookup"><span data-stu-id="5859c-104">Because no conversion keyword is used, the conversion is *implicit*.</span></span>  
+# <a name="implicit-conversion-from-typename1-to-typename2"></a><span data-ttu-id="f32f9-102">Conversione implicita da' \<typename1> ' a' \<typename2> '</span><span class="sxs-lookup"><span data-stu-id="f32f9-102">Implicit conversion from '\<typename1>' to '\<typename2>'</span></span>
+<span data-ttu-id="f32f9-103">Un'espressione o un'istruzione di assegnazione accetta un valore di un tipo di dati e lo converte in un altro tipo.</span><span class="sxs-lookup"><span data-stu-id="f32f9-103">An expression or an assignment statement takes a value of one data type and converts it to another type.</span></span> <span data-ttu-id="f32f9-104">Dato che non viene usata alcuna parola chiave, la conversione è *implicita*.</span><span class="sxs-lookup"><span data-stu-id="f32f9-104">Because no conversion keyword is used, the conversion is *implicit*.</span></span>  
   
- <span data-ttu-id="5859c-105">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="5859c-105">By default, this message is a warning.</span></span> <span data-ttu-id="5859c-106">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="5859c-106">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="f32f9-105">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="f32f9-105">By default, this message is a warning.</span></span> <span data-ttu-id="f32f9-106">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="f32f9-106">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="5859c-107">**ID errore:** BC42016</span><span class="sxs-lookup"><span data-stu-id="5859c-107">**Error ID:** BC42016</span></span>  
+ <span data-ttu-id="f32f9-107">**ID errore:** BC42016</span><span class="sxs-lookup"><span data-stu-id="f32f9-107">**Error ID:** BC42016</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5859c-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5859c-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f32f9-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f32f9-108">To correct this error</span></span>  
   
-- <span data-ttu-id="5859c-109">Se possibile, usare i valori dello stesso tipo di dati, in modo che Visual Basic non è necessario eseguire alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="5859c-109">If possible, use values of the same data type, so Visual Basic does not need to do any conversion.</span></span>  
+- <span data-ttu-id="f32f9-109">Se possibile, usare valori dello stesso tipo di dati, in modo che Visual Basic non debba eseguire alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="f32f9-109">If possible, use values of the same data type, so Visual Basic does not need to do any conversion.</span></span>  
   
-- <span data-ttu-id="5859c-110">Usare `CType` o una delle altre parole chiave di conversione affinché la conversione sia *esplicita*.</span><span class="sxs-lookup"><span data-stu-id="5859c-110">Use `CType` or one of the other conversion keywords so that the conversion is *explicit*.</span></span>  
+- <span data-ttu-id="f32f9-110">Usare `CType` o una delle altre parole chiave di conversione affinché la conversione sia *esplicita*.</span><span class="sxs-lookup"><span data-stu-id="f32f9-110">Use `CType` or one of the other conversion keywords so that the conversion is *explicit*.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5859c-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5859c-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f32f9-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f32f9-111">See also</span></span>
 
-- [<span data-ttu-id="5859c-112">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="5859c-112">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [<span data-ttu-id="5859c-113">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="5859c-113">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="f32f9-112">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="f32f9-112">Implicit and Explicit Conversions</span></span>](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="f32f9-113">CString</span><span class="sxs-lookup"><span data-stu-id="f32f9-113">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
