--- a/docs/visual-basic/misc/bc30037.md
+++ b/docs/visual-basic/misc/bc30037.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30037
 ms.assetid: bc34e427-f3fa-43a7-bbf6-2e608c9d2494
-ms.openlocfilehash: 632480b6e1122f46bf873580d6c4fcf7fa1e7a17
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: cdeb1879f81b946f662f00f029010277c7a288c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61933588"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381978"
 ---
-# <a name="character-is-not-valid"></a><span data-ttu-id="3e50d-102">Carattere non valido</span><span class="sxs-lookup"><span data-stu-id="3e50d-102">Character is not valid</span></span>
-<span data-ttu-id="3e50d-103">Il contesto corrente non supporta il carattere.</span><span class="sxs-lookup"><span data-stu-id="3e50d-103">The current context does not permit this character.</span></span> <span data-ttu-id="3e50d-104">Ad esempio, una tilde (`~`) o una barra verticale (`|`) non può essere inclusa nel nome di un elemento dichiarato.</span><span class="sxs-lookup"><span data-stu-id="3e50d-104">For example, a tilde (`~`) or vertical bar (`|`) cannot be part of a declared element name.</span></span>  
+# <a name="character-is-not-valid"></a><span data-ttu-id="4ae9d-102">Carattere non valido</span><span class="sxs-lookup"><span data-stu-id="4ae9d-102">Character is not valid</span></span>
+<span data-ttu-id="4ae9d-103">Il contesto corrente non supporta il carattere.</span><span class="sxs-lookup"><span data-stu-id="4ae9d-103">The current context does not permit this character.</span></span> <span data-ttu-id="4ae9d-104">Ad esempio, una tilde (`~`) o una barra verticale (`|`) non può essere inclusa nel nome di un elemento dichiarato.</span><span class="sxs-lookup"><span data-stu-id="4ae9d-104">For example, a tilde (`~`) or vertical bar (`|`) cannot be part of a declared element name.</span></span>  
   
- <span data-ttu-id="3e50d-105">**ID errore:** BC30037</span><span class="sxs-lookup"><span data-stu-id="3e50d-105">**Error ID:** BC30037</span></span>  
+ <span data-ttu-id="4ae9d-105">**ID errore:** BC30037</span><span class="sxs-lookup"><span data-stu-id="4ae9d-105">**Error ID:** BC30037</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3e50d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3e50d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4ae9d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4ae9d-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="3e50d-107">Controllare che non sia stato accidentalmente inserito un carattere aggiuntivo nell'elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="3e50d-107">Check to see if an extra character has accidentally been inserted into the programming element.</span></span>  
+1. <span data-ttu-id="4ae9d-107">Controllare che non sia stato accidentalmente inserito un carattere aggiuntivo nell'elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="4ae9d-107">Check to see if an extra character has accidentally been inserted into the programming element.</span></span>  
   
-2. <span data-ttu-id="3e50d-108">Verificare che l'elemento di programmazione sia scritto o costruito usando solo caratteri validi per quel tipo di elemento.</span><span class="sxs-lookup"><span data-stu-id="3e50d-108">Check that the programming element is spelled or constructed using only characters that are valid for that kind of element.</span></span>  
+2. <span data-ttu-id="4ae9d-108">Verificare che l'elemento di programmazione sia scritto o costruito usando solo caratteri validi per quel tipo di elemento.</span><span class="sxs-lookup"><span data-stu-id="4ae9d-108">Check that the programming element is spelled or constructed using only characters that are valid for that kind of element.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3e50d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3e50d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4ae9d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4ae9d-109">See also</span></span>
 
-- [<span data-ttu-id="3e50d-110">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="3e50d-110">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="4ae9d-110">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="4ae9d-110">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
