--- a/docs/visual-basic/misc/bc30038.md
+++ b/docs/visual-basic/misc/bc30038.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non ammette operandi di tipo Object per l'operatore '<operatorname>'
+title: Option Strict On non impedisce gli operandi di tipo Object per l'operatore ' <operatorname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30038
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30038
 ms.assetid: eb047d36-1fb4-460d-ae98-c76f31a89bed
-ms.openlocfilehash: dce17a1e9de548c978037d783e1904af0eb76a5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a39eef1a78911a091e4558065aa923b98f48a451
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606452"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381965"
 ---
-# <a name="option-strict-on-prohibits-operands-of-type-object-for-operator-operatorname"></a><span data-ttu-id="3d0fe-102">Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'</span><span class="sxs-lookup"><span data-stu-id="3d0fe-102">Option Strict On prohibits operands of type Object for operator '\<operatorname>'</span></span>
-<span data-ttu-id="3d0fe-103">Gli unici operatori definiti per le variabili oggetto sono `Is` e `TypeOf...Is`.</span><span class="sxs-lookup"><span data-stu-id="3d0fe-103">The only operators defined for object variables are `Is` and `TypeOf...Is`.</span></span> <span data-ttu-id="3d0fe-104">Quando `Option Strict` è `On`, tutti gli operandi devono essere di tipi di dati definiti per l'operatore specificato.</span><span class="sxs-lookup"><span data-stu-id="3d0fe-104">When `Option Strict` is `On`, all operands must be of data types defined for the given operator.</span></span>  
+# <a name="option-strict-on-prohibits-operands-of-type-object-for-operator-operatorname"></a><span data-ttu-id="1f01d-102">Option Strict On non impedisce gli operandi di tipo Object per l'operatore ' \<operatorname> '</span><span class="sxs-lookup"><span data-stu-id="1f01d-102">Option Strict On prohibits operands of type Object for operator '\<operatorname>'</span></span>
+<span data-ttu-id="1f01d-103">Gli unici operatori definiti per le variabili oggetto sono `Is` e `TypeOf...Is`.</span><span class="sxs-lookup"><span data-stu-id="1f01d-103">The only operators defined for object variables are `Is` and `TypeOf...Is`.</span></span> <span data-ttu-id="1f01d-104">Quando `Option Strict` è `On`, tutti gli operandi devono essere di tipi di dati definiti per l'operatore specificato.</span><span class="sxs-lookup"><span data-stu-id="1f01d-104">When `Option Strict` is `On`, all operands must be of data types defined for the given operator.</span></span>  
   
- <span data-ttu-id="3d0fe-105">**ID errore:** BC30038</span><span class="sxs-lookup"><span data-stu-id="3d0fe-105">**Error ID:** BC30038</span></span>  
+ <span data-ttu-id="1f01d-105">**ID errore:** BC30038</span><span class="sxs-lookup"><span data-stu-id="1f01d-105">**Error ID:** BC30038</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3d0fe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3d0fe-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1f01d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1f01d-106">To correct this error</span></span>  
   
-- <span data-ttu-id="3d0fe-107">Usare le funzioni di conversione dei tipi appropriate, ad esempio `CInt` o `CStr`, per convertire gli operandi in tipi di dati definiti per l'operatore.</span><span class="sxs-lookup"><span data-stu-id="3d0fe-107">Use the appropriate type conversion functions, such as `CInt` or `CStr`, to convert the operands to data types defined for the operator.</span></span>  
+- <span data-ttu-id="1f01d-107">Usare le funzioni di conversione dei tipi appropriate, ad esempio `CInt` o `CStr`, per convertire gli operandi in tipi di dati definiti per l'operatore.</span><span class="sxs-lookup"><span data-stu-id="1f01d-107">Use the appropriate type conversion functions, such as `CInt` or `CStr`, to convert the operands to data types defined for the operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3d0fe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3d0fe-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1f01d-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1f01d-108">See also</span></span>
 
-- [<span data-ttu-id="3d0fe-109">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="3d0fe-109">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)
-- [<span data-ttu-id="3d0fe-110">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3d0fe-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [<span data-ttu-id="3d0fe-111">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="3d0fe-111">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="1f01d-109">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="1f01d-109">Is Operator</span></span>](../language-reference/operators/is-operator.md)
+- [<span data-ttu-id="1f01d-110">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1f01d-110">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="1f01d-111">CString</span><span class="sxs-lookup"><span data-stu-id="1f01d-111">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
