--- a/docs/visual-basic/misc/bc30040.md
+++ b/docs/visual-basic/misc/bc30040.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30040
 ms.assetid: 27df3488-de77-499d-b9a6-08037d540cb0
-ms.openlocfilehash: 946dffd38215117365e4f8f20ee5b3ad8b8d302c
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ee97cc0b764a98ab0b5bffc4775c939e2ebfbc0e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61933536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381874"
 ---
-# <a name="first-statement-of-a-method-body-cannot-be-on-the-same-line-as-the-method-declaration"></a><span data-ttu-id="ef17b-102">La prima istruzione del corpo di un metodo non può essere sulla stessa riga della dichiarazione del metodo</span><span class="sxs-lookup"><span data-stu-id="ef17b-102">First statement of a method body cannot be on the same line as the method declaration</span></span>
-<span data-ttu-id="ef17b-103">Un'istruzione `Function`, `Sub`, `Get`, `Set`o `Property` non deve essere accompagnata da altre istruzioni in una riga del codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="ef17b-103">A `Function`, `Sub`, `Get`, `Set`, or `Property` statement must be alone on a source code line.</span></span>  
+# <a name="first-statement-of-a-method-body-cannot-be-on-the-same-line-as-the-method-declaration"></a><span data-ttu-id="70043-102">La prima istruzione del corpo di un metodo non può essere sulla stessa riga della dichiarazione del metodo</span><span class="sxs-lookup"><span data-stu-id="70043-102">First statement of a method body cannot be on the same line as the method declaration</span></span>
+<span data-ttu-id="70043-103">Un'istruzione `Function`, `Sub`, `Get`, `Set`o `Property` non deve essere accompagnata da altre istruzioni in una riga del codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="70043-103">A `Function`, `Sub`, `Get`, `Set`, or `Property` statement must be alone on a source code line.</span></span>  
   
- <span data-ttu-id="ef17b-104">**ID errore:** BC30040</span><span class="sxs-lookup"><span data-stu-id="ef17b-104">**Error ID:** BC30040</span></span>  
+ <span data-ttu-id="70043-104">**ID errore:** BC30040</span><span class="sxs-lookup"><span data-stu-id="70043-104">**Error ID:** BC30040</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ef17b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ef17b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="70043-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="70043-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="ef17b-106">Rimuovere ogni altra etichetta di riga che precede la dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="ef17b-106">Remove any line label preceding the procedure declaration.</span></span>  
+1. <span data-ttu-id="70043-106">Rimuovere ogni altra etichetta di riga che precede la dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="70043-106">Remove any line label preceding the procedure declaration.</span></span>  
   
-2. <span data-ttu-id="ef17b-107">Spostare le istruzioni che precedono la dichiarazione di routine in una riga di codice sorgente precedente.</span><span class="sxs-lookup"><span data-stu-id="ef17b-107">Move any statement preceding the procedure declaration to a previous source code line.</span></span>  
+2. <span data-ttu-id="70043-107">Spostare le istruzioni che precedono la dichiarazione di routine in una riga di codice sorgente precedente.</span><span class="sxs-lookup"><span data-stu-id="70043-107">Move any statement preceding the procedure declaration to a previous source code line.</span></span>  
   
-3. <span data-ttu-id="ef17b-108">Spostare le istruzioni che seguono la dichiarazione di routine in una riga di codice sorgente successiva.</span><span class="sxs-lookup"><span data-stu-id="ef17b-108">Move any statement following the procedure declaration to a subsequent source code line.</span></span>  
+3. <span data-ttu-id="70043-108">Spostare le istruzioni che seguono la dichiarazione di routine in una riga di codice sorgente successiva.</span><span class="sxs-lookup"><span data-stu-id="70043-108">Move any statement following the procedure declaration to a subsequent source code line.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ef17b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ef17b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="70043-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="70043-109">See also</span></span>
 
-- [<span data-ttu-id="ef17b-110">Routine</span><span class="sxs-lookup"><span data-stu-id="ef17b-110">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [<span data-ttu-id="ef17b-111">Procedura: etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="ef17b-111">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [<span data-ttu-id="70043-110">Procedure</span><span class="sxs-lookup"><span data-stu-id="70043-110">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="70043-111">Procedura: Etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="70043-111">How to: Label Statements</span></span>](../programming-guide/program-structure/how-to-label-statements.md)
