--- a/docs/visual-basic/misc/bc30049.md
+++ b/docs/visual-basic/misc/bc30049.md
@@ -1,5 +1,5 @@
 ---
-title: "'<statementname>' istruzione richiede una matrice"
+title: <statementname>l'istruzione '' richiede una matrice
 ms.date: 07/20/2015
 f1_keywords:
 - bc30049
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30049
 ms.assetid: 294ce09c-49f9-4f78-b0eb-8bae51ea9a1c
-ms.openlocfilehash: d0a6abfb855a8f07c731f481cd6bdc9d63299aed
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2191df9fb2174cbca9bca36e0944f00980aa3c3a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625296"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381420"
 ---
-# <a name="statementname-statement-requires-an-array"></a><span data-ttu-id="f66ca-102">'\<nomeistruzione >' istruzione richiede una matrice</span><span class="sxs-lookup"><span data-stu-id="f66ca-102">'\<statementname>' statement requires an array</span></span>
-<span data-ttu-id="f66ca-103">Le istruzioni `Erase` e `ReDim` richiedono i tipi di dati della matrice.</span><span class="sxs-lookup"><span data-stu-id="f66ca-103">The `Erase` and `ReDim` statements require array data types.</span></span> <span data-ttu-id="f66ca-104">Il tipo fornito non è una matrice.</span><span class="sxs-lookup"><span data-stu-id="f66ca-104">The type supplied is not an array.</span></span>  
+# <a name="statementname-statement-requires-an-array"></a><span data-ttu-id="ab259-102">\<statementname>l'istruzione '' richiede una matrice</span><span class="sxs-lookup"><span data-stu-id="ab259-102">'\<statementname>' statement requires an array</span></span>
+<span data-ttu-id="ab259-103">Le istruzioni `Erase` e `ReDim` richiedono i tipi di dati della matrice.</span><span class="sxs-lookup"><span data-stu-id="ab259-103">The `Erase` and `ReDim` statements require array data types.</span></span> <span data-ttu-id="ab259-104">Il tipo fornito non è una matrice.</span><span class="sxs-lookup"><span data-stu-id="ab259-104">The type supplied is not an array.</span></span>  
   
- <span data-ttu-id="f66ca-105">**ID errore:** BC30049</span><span class="sxs-lookup"><span data-stu-id="f66ca-105">**Error ID:** BC30049</span></span>  
+ <span data-ttu-id="ab259-105">**ID errore:** BC30049</span><span class="sxs-lookup"><span data-stu-id="ab259-105">**Error ID:** BC30049</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f66ca-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f66ca-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ab259-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ab259-106">To correct this error</span></span>  
   
-- <span data-ttu-id="f66ca-107">Modificare il tipo di dati in un tipo di matrice.</span><span class="sxs-lookup"><span data-stu-id="f66ca-107">Change the data type to an array type.</span></span>  
+- <span data-ttu-id="ab259-107">Modificare il tipo di dati in un tipo di matrice.</span><span class="sxs-lookup"><span data-stu-id="ab259-107">Change the data type to an array type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f66ca-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f66ca-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ab259-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ab259-108">See also</span></span>
 
-- [<span data-ttu-id="f66ca-109">Istruzione Erase</span><span class="sxs-lookup"><span data-stu-id="f66ca-109">Erase Statement</span></span>](../../visual-basic/language-reference/statements/erase-statement.md)
-- [<span data-ttu-id="f66ca-110">Istruzione ReDim</span><span class="sxs-lookup"><span data-stu-id="f66ca-110">ReDim Statement</span></span>](../../visual-basic/language-reference/statements/redim-statement.md)
-- [<span data-ttu-id="f66ca-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="f66ca-111">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="ab259-109">Istruzione Erase</span><span class="sxs-lookup"><span data-stu-id="ab259-109">Erase Statement</span></span>](../language-reference/statements/erase-statement.md)
+- [<span data-ttu-id="ab259-110">Istruzione ReDim</span><span class="sxs-lookup"><span data-stu-id="ab259-110">ReDim Statement</span></span>](../language-reference/statements/redim-statement.md)
+- [<span data-ttu-id="ab259-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="ab259-111">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
