--- a/docs/visual-basic/misc/bc30065.md
+++ b/docs/visual-basic/misc/bc30065.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30065
 ms.assetid: d6426861-ba64-4dca-9100-262c6c058bd9
-ms.openlocfilehash: e030a0d0d794f8aedc35a341e25150102114b963
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f6752c71e6ad763e2f8933f562d040866c2cfddb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622267"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381368"
 ---
-# <a name="exit-sub-is-not-valid-in-a-function-or-property"></a><span data-ttu-id="d19d2-102">'Exit Sub' non è valido in Function o Property</span><span class="sxs-lookup"><span data-stu-id="d19d2-102">'Exit Sub' is not valid in a Function or Property</span></span>
-<span data-ttu-id="d19d2-103">`Exit Sub` viene visualizzato in una routine `Function` o `Property` .</span><span class="sxs-lookup"><span data-stu-id="d19d2-103">`Exit Sub` appears in a `Function` procedure or a `Property` procedure.</span></span> <span data-ttu-id="d19d2-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="d19d2-104">An `Exit` statement must match the block in which it occurs.</span></span>  
+# <a name="exit-sub-is-not-valid-in-a-function-or-property"></a><span data-ttu-id="7a0b4-102">'Exit Sub' non è valido in Function o Property</span><span class="sxs-lookup"><span data-stu-id="7a0b4-102">'Exit Sub' is not valid in a Function or Property</span></span>
+<span data-ttu-id="7a0b4-103">`Exit Sub` viene visualizzato in una routine `Function` o `Property` .</span><span class="sxs-lookup"><span data-stu-id="7a0b4-103">`Exit Sub` appears in a `Function` procedure or a `Property` procedure.</span></span> <span data-ttu-id="7a0b4-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="7a0b4-104">An `Exit` statement must match the block in which it occurs.</span></span>  
   
- <span data-ttu-id="d19d2-105">**ID errore:** BC30065</span><span class="sxs-lookup"><span data-stu-id="d19d2-105">**Error ID:** BC30065</span></span>  
+ <span data-ttu-id="7a0b4-105">**ID errore:** BC30065</span><span class="sxs-lookup"><span data-stu-id="7a0b4-105">**Error ID:** BC30065</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d19d2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d19d2-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7a0b4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7a0b4-106">To correct this error</span></span>  
   
-- <span data-ttu-id="d19d2-107">Sostituire `Exit Sub` con l'istruzione `Exit Function` o `Exit Property` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="d19d2-107">Replace the `Exit Sub` with the `Exit Function` or `Exit Property` statement as appropriate.</span></span>  
+- <span data-ttu-id="7a0b4-107">Sostituire `Exit Sub` con l'istruzione `Exit Function` o `Exit Property` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="7a0b4-107">Replace the `Exit Sub` with the `Exit Function` or `Exit Property` statement as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d19d2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d19d2-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7a0b4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7a0b4-108">See also</span></span>
 
-- [<span data-ttu-id="d19d2-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="d19d2-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="d19d2-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="d19d2-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="d19d2-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="d19d2-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="7a0b4-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="7a0b4-109">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="7a0b4-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="7a0b4-110">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="7a0b4-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="7a0b4-111">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
