--- a/docs/visual-basic/misc/bc30071.md
+++ b/docs/visual-basic/misc/bc30071.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30071
 ms.assetid: 9a4f8ccb-717a-4d18-91b4-4a373202c38a
-ms.openlocfilehash: 26ed4c0c044665b0a0a8aadfa56feed593cd3741
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 137cd47c01f34219ea264b28d7ab0d7b729ae684
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622310"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381173"
 ---
-# <a name="case-else-can-only-appear-inside-a-select-case-statement"></a><span data-ttu-id="c1572-102">'Case Else' può essere specificato solo all'interno di un'istruzione 'Select Case'</span><span class="sxs-lookup"><span data-stu-id="c1572-102">'Case Else' can only appear inside a 'Select Case' statement</span></span>
-<span data-ttu-id="c1572-103">Un'istruzione `Case Else` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="c1572-103">A `Case Else` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="c1572-104">Un'istruzione `Case Else` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="c1572-104">A `Case Else` statement can be used only between a `Select` or `Select Case` statement and its corresponding `End Select` statement.</span></span>  
+# <a name="case-else-can-only-appear-inside-a-select-case-statement"></a><span data-ttu-id="f7ad6-102">'Case Else' può essere specificato solo all'interno di un'istruzione 'Select Case'</span><span class="sxs-lookup"><span data-stu-id="f7ad6-102">'Case Else' can only appear inside a 'Select Case' statement</span></span>
+<span data-ttu-id="f7ad6-103">Un'istruzione `Case Else` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="f7ad6-103">A `Case Else` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="f7ad6-104">Un'istruzione `Case Else` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="f7ad6-104">A `Case Else` statement can be used only between a `Select` or `Select Case` statement and its corresponding `End Select` statement.</span></span>  
   
- <span data-ttu-id="c1572-105">**ID errore:** BC30071</span><span class="sxs-lookup"><span data-stu-id="c1572-105">**Error ID:** BC30071</span></span>  
+ <span data-ttu-id="f7ad6-105">**ID errore:** BC30071</span><span class="sxs-lookup"><span data-stu-id="f7ad6-105">**Error ID:** BC30071</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c1572-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1572-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f7ad6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f7ad6-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c1572-107">Rimuovere l'istruzione `Case Else` o spostarla all'interno di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="c1572-107">Remove the `Case Else` statement or move it to within a `Select` block.</span></span>  
+- <span data-ttu-id="f7ad6-107">Rimuovere l'istruzione `Case Else` o spostarla all'interno di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="f7ad6-107">Remove the `Case Else` statement or move it to within a `Select` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c1572-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1572-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f7ad6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f7ad6-108">See also</span></span>
 
-- [<span data-ttu-id="c1572-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="c1572-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="f7ad6-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="f7ad6-109">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
