--- a/docs/visual-basic/misc/bc30755.md
+++ b/docs/visual-basic/misc/bc30755.md
@@ -1,5 +1,5 @@
 ---
-title: "' GoTo <labelname>' non è valido perché '<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione"
+title: "'GoTo <labelname>' non è valida perché '<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30755
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30755
 ms.assetid: 95fb48c1-4982-45fc-81f0-f30cf0df173f
-ms.openlocfilehash: b274e80570fcc796135d5d3db4f7652587e682b4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c53a79d51ef7f9859a1f4b63fa4fc33502f8b244
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657403"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412520"
 ---
-# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="104be-102">' GoTo \<NomeEtichetta >' non è valido perché '\<NomeEtichetta >' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione</span><span class="sxs-lookup"><span data-stu-id="104be-102">'GoTo \<labelname>' is not valid because '\<labelname>' is inside a 'SyncLock' statement that does not contain this statement</span></span>
-<span data-ttu-id="104be-103">Non è consentito creare rami in un blocco `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="104be-103">You cannot branch into a `SyncLock` block.</span></span>  
+# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="a70a6-102">'GoTo \<labelname>' non è valida perché '\<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione</span><span class="sxs-lookup"><span data-stu-id="a70a6-102">'GoTo \<labelname>' is not valid because '\<labelname>' is inside a 'SyncLock' statement that does not contain this statement</span></span>
+<span data-ttu-id="a70a6-103">Non è consentito creare rami in un blocco `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="a70a6-103">You cannot branch into a `SyncLock` block.</span></span>  
   
- <span data-ttu-id="104be-104">**ID errore:** BC30755</span><span class="sxs-lookup"><span data-stu-id="104be-104">**Error ID:** BC30755</span></span>  
+ <span data-ttu-id="a70a6-104">**ID errore:** BC30755</span><span class="sxs-lookup"><span data-stu-id="a70a6-104">**Error ID:** BC30755</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="104be-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="104be-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a70a6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a70a6-105">To correct this error</span></span>  
   
-- <span data-ttu-id="104be-106">Ristrutturare il codice inserendo l'etichetta prima del blocco `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="104be-106">Restructure your code so that the label precedes the `SyncLock` block.</span></span>  
+- <span data-ttu-id="a70a6-106">Ristrutturare il codice inserendo l'etichetta prima del blocco `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="a70a6-106">Restructure your code so that the label precedes the `SyncLock` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="104be-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="104be-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a70a6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a70a6-107">See also</span></span>
 
-- [<span data-ttu-id="104be-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="104be-108">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [<span data-ttu-id="a70a6-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="a70a6-108">SyncLock Statement</span></span>](../language-reference/statements/synclock-statement.md)
