--- a/docs/visual-basic/misc/bc30906.md
+++ b/docs/visual-basic/misc/bc30906.md
@@ -1,5 +1,5 @@
 ---
-title: <procedurename1>Impossibile eseguire <procedurename2> l'override perché si differenziano per i parametri dichiarati come ' ParamArray '
+title: <procedurename1> non può eseguire l'override di <procedurename2> perché si differenziano per i parametri dichiarati come 'ParamArray'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30906
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30906
 ms.assetid: 12939030-732e-4c6d-8fe9-707b7532174b
-ms.openlocfilehash: 329a4f2e5e7d310c4340f162b4b0d41d2e5cc3aa
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 90e6cf561ca0132f0ee680c8eb457047b870d894
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667055"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408263"
 ---
-# <a name="procedurename1-cannot-override-procedurename2-because-they-differ-by-parameters-declared-paramarray"></a><span data-ttu-id="2890f-102">\<nomeroutine1 > non può \<eseguire l'override di nomeroutine2 > perché si differenziano per i parametri dichiarati ' ParamArray '</span><span class="sxs-lookup"><span data-stu-id="2890f-102">\<procedurename1> cannot override \<procedurename2> because they differ by parameters declared 'ParamArray'</span></span>
-<span data-ttu-id="2890f-103">Una routine in una classe derivata esegue l'override di una routine con nome identico nella classe base, ma gli elenchi di parametri sono diversi.</span><span class="sxs-lookup"><span data-stu-id="2890f-103">A procedure in a derived class overrides an identically named procedure in the base class, but the parameter lists are different.</span></span>  
+# <a name="procedurename1-cannot-override-procedurename2-because-they-differ-by-parameters-declared-paramarray"></a><span data-ttu-id="c1f7c-102">\<procedurename1> non può eseguire l'override di \<procedurename2> perché si differenziano per i parametri dichiarati come 'ParamArray'</span><span class="sxs-lookup"><span data-stu-id="c1f7c-102">\<procedurename1> cannot override \<procedurename2> because they differ by parameters declared 'ParamArray'</span></span>
+<span data-ttu-id="c1f7c-103">Una routine in una classe derivata esegue l'override di una routine con nome identico nella classe base, ma gli elenchi di parametri sono diversi.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-103">A procedure in a derived class overrides an identically named procedure in the base class, but the parameter lists are different.</span></span>  
   
- <span data-ttu-id="2890f-104">Per eseguire l'override di una routine in una classe ereditata, tale routine deve corrispondere ai relativi elenco di parametri, livello di accesso e qualsiasi eventuale tipo restituito.</span><span class="sxs-lookup"><span data-stu-id="2890f-104">To override a procedure in an inherited class, the overriding procedure must match its parameter list, access level, and return type (if any).</span></span> <span data-ttu-id="2890f-105">In particolare, deve corrispondere a qualsiasi dichiarazione [facoltativa](../../visual-basic/language-reference/modifiers/optional.md) o [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) .</span><span class="sxs-lookup"><span data-stu-id="2890f-105">In particular, it must match any [Optional](../../visual-basic/language-reference/modifiers/optional.md) or [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) declaration.</span></span>  
+ <span data-ttu-id="c1f7c-104">Per eseguire l'override di una routine in una classe ereditata, tale routine deve corrispondere ai relativi elenco di parametri, livello di accesso e qualsiasi eventuale tipo restituito.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-104">To override a procedure in an inherited class, the overriding procedure must match its parameter list, access level, and return type (if any).</span></span> <span data-ttu-id="c1f7c-105">In particolare, deve corrispondere a qualsiasi dichiarazione [facoltativa](../language-reference/modifiers/optional.md) o [ParamArray](../language-reference/modifiers/paramarray.md) .</span><span class="sxs-lookup"><span data-stu-id="c1f7c-105">In particular, it must match any [Optional](../language-reference/modifiers/optional.md) or [ParamArray](../language-reference/modifiers/paramarray.md) declaration.</span></span>  
   
- <span data-ttu-id="2890f-106">**ID errore:** BC30906</span><span class="sxs-lookup"><span data-stu-id="2890f-106">**Error ID:** BC30906</span></span>  
+ <span data-ttu-id="c1f7c-106">**ID errore:** BC30906</span><span class="sxs-lookup"><span data-stu-id="c1f7c-106">**Error ID:** BC30906</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2890f-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2890f-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c1f7c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1f7c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="2890f-108">Per eseguire l'override della routine, rendere l'elenco di parametri esattamente uguale all'elenco di parametri della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="2890f-108">If you want to override the procedure, make the parameter list exactly the same as the parameter list in the base class procedure.</span></span> <span data-ttu-id="2890f-109">Se nella routine della classe base l'ultimo parametro viene dichiarato inserendo `ParamArray` , dichiarare `ParamArray` anche per l'ultimo parametro della routine di override.</span><span class="sxs-lookup"><span data-stu-id="2890f-109">If the last parameter is declared with `ParamArray` in the base class procedure, declare it with `ParamArray` in the overriding procedure.</span></span>  
+- <span data-ttu-id="c1f7c-108">Per eseguire l'override della routine, rendere l'elenco di parametri esattamente uguale all'elenco di parametri della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-108">If you want to override the procedure, make the parameter list exactly the same as the parameter list in the base class procedure.</span></span> <span data-ttu-id="c1f7c-109">Se nella routine della classe base l'ultimo parametro viene dichiarato inserendo `ParamArray` , dichiarare `ParamArray` anche per l'ultimo parametro della routine di override.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-109">If the last parameter is declared with `ParamArray` in the base class procedure, declare it with `ParamArray` in the overriding procedure.</span></span>  
   
-- <span data-ttu-id="2890f-110">Se si vuole un elenco di parametri diverso rispetto alla versione della classe base, non sarà possibile eseguirne l'override.</span><span class="sxs-lookup"><span data-stu-id="2890f-110">If you want a different parameter list from the base class version, you cannot override it.</span></span> <span data-ttu-id="2890f-111">Sarà tuttavia possibile eseguirne l'overload.</span><span class="sxs-lookup"><span data-stu-id="2890f-111">Consider overloading it instead.</span></span> <span data-ttu-id="2890f-112">Per altre informazioni, vedere [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md).</span><span class="sxs-lookup"><span data-stu-id="2890f-112">For more information, see [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md).</span></span>  
+- <span data-ttu-id="c1f7c-110">Se si vuole un elenco di parametri diverso rispetto alla versione della classe base, non sarà possibile eseguirne l'override.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-110">If you want a different parameter list from the base class version, you cannot override it.</span></span> <span data-ttu-id="c1f7c-111">Sarà tuttavia possibile eseguirne l'overload.</span><span class="sxs-lookup"><span data-stu-id="c1f7c-111">Consider overloading it instead.</span></span> <span data-ttu-id="c1f7c-112">Per altre informazioni, vedere [Procedure Overloading](../programming-guide/language-features/procedures/procedure-overloading.md).</span><span class="sxs-lookup"><span data-stu-id="c1f7c-112">For more information, see [Procedure Overloading](../programming-guide/language-features/procedures/procedure-overloading.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2890f-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2890f-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c1f7c-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1f7c-113">See also</span></span>
 
-- [<span data-ttu-id="2890f-114">Overrides</span><span class="sxs-lookup"><span data-stu-id="2890f-114">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
-- [<span data-ttu-id="2890f-115">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="2890f-115">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="c1f7c-114">Override</span><span class="sxs-lookup"><span data-stu-id="c1f7c-114">Overrides</span></span>](../language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="c1f7c-115">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="c1f7c-115">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
