--- a/docs/visual-basic/misc/bc36709.md
+++ b/docs/visual-basic/misc/bc36709.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente la riduzione in conversioni implicite tra il metodo di estensione '<extensionmethodname>'definito '<modulename>'e delegato'<delegatename>'
+title: Option Strict On non consente la riduzione in conversioni implicite di tipi tra il metodo di estensione ' <extensionmethodname> ' definito in ' <modulename> ' e il delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36709
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC36709
 ms.assetid: 95d8c833-3525-411b-98e8-b7d3f61f75c9
-ms.openlocfilehash: b0877748722185de520245423548d1eb4064ac1d
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 61c97f7d21c30ef1f079313d5546f8382a2253cf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913128"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411213"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a><span data-ttu-id="edbc1-102">Option Strict On non consente la riduzione in conversioni implicite tra il metodo di estensione '\<nomemetodoestensione >' definito in '\<NomeModulo >' e il delegato '\<NomeDelegato >'</span><span class="sxs-lookup"><span data-stu-id="edbc1-102">Option Strict On does not allow narrowing in implicit type conversions between extension method '\<extensionmethodname>' defined in '\<modulename>' and delegate '\<delegatename>'</span></span>
-<span data-ttu-id="edbc1-103">Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo dal tipo di dati di un parametro a un delegato nel parametro corrispondente parametro di un metodo di estensione assegnato a una variabile di quel tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="edbc1-103">With `Option Strict` on, you cannot have a narrowing conversion from the data type of a parameter in a delegate to the corresponding parameter of an extension method assigned to a variable of that delegate type.</span></span> <span data-ttu-id="edbc1-104">Il tipo di dati del parametro del delegato deve ampliarsi nel tipo di dati del metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="edbc1-104">The data type of the delegate parameter must widen to the data type of the extension method.</span></span>  
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a><span data-ttu-id="a5295-102">Option Strict On non consente la riduzione in conversioni implicite di tipi tra il metodo di estensione ' \<extensionmethodname> ' definito in ' \<modulename> ' e il delegato ' \<delegatename> '</span><span class="sxs-lookup"><span data-stu-id="a5295-102">Option Strict On does not allow narrowing in implicit type conversions between extension method '\<extensionmethodname>' defined in '\<modulename>' and delegate '\<delegatename>'</span></span>
+<span data-ttu-id="a5295-103">Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo dal tipo di dati di un parametro a un delegato nel parametro corrispondente parametro di un metodo di estensione assegnato a una variabile di quel tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="a5295-103">With `Option Strict` on, you cannot have a narrowing conversion from the data type of a parameter in a delegate to the corresponding parameter of an extension method assigned to a variable of that delegate type.</span></span> <span data-ttu-id="a5295-104">Il tipo di dati del parametro del delegato deve ampliarsi nel tipo di dati del metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="a5295-104">The data type of the delegate parameter must widen to the data type of the extension method.</span></span>  
   
- <span data-ttu-id="edbc1-105">**ID errore:** BC36709</span><span class="sxs-lookup"><span data-stu-id="edbc1-105">**Error ID:** BC36709</span></span>  
+ <span data-ttu-id="a5295-105">**ID errore:** BC36709</span><span class="sxs-lookup"><span data-stu-id="a5295-105">**Error ID:** BC36709</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="edbc1-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="edbc1-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a5295-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a5295-106">To correct this error</span></span>  
   
-- <span data-ttu-id="edbc1-107">Modificare il tipo di dati del parametro nel delegato o nel metodo di estensione in modo che sia presente la relazione obbligatoria di conversione verso un tipo di dati più grande.</span><span class="sxs-lookup"><span data-stu-id="edbc1-107">Change the data type of the parameter in the delegate or the extension method so that the required widening relationship exists.</span></span>  
+- <span data-ttu-id="a5295-107">Modificare il tipo di dati del parametro nel delegato o nel metodo di estensione in modo che sia presente la relazione obbligatoria di conversione verso un tipo di dati più grande.</span><span class="sxs-lookup"><span data-stu-id="a5295-107">Change the data type of the parameter in the delegate or the extension method so that the required widening relationship exists.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="edbc1-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="edbc1-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a5295-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a5295-108">See also</span></span>
 
-- [<span data-ttu-id="edbc1-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="edbc1-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="edbc1-110">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="edbc1-110">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [<span data-ttu-id="edbc1-111">Delegati</span><span class="sxs-lookup"><span data-stu-id="edbc1-111">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)
-- [<span data-ttu-id="edbc1-112">Conversioni di ampliamento e restrizione</span><span class="sxs-lookup"><span data-stu-id="edbc1-112">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [<span data-ttu-id="a5295-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="a5295-109">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="a5295-110">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="a5295-110">Relaxed Delegate Conversion</span></span>](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="a5295-111">Delegati</span><span class="sxs-lookup"><span data-stu-id="a5295-111">Delegates</span></span>](../programming-guide/language-features/delegates/index.md)
+- [<span data-ttu-id="a5295-112">Widening and Narrowing Conversions</span><span class="sxs-lookup"><span data-stu-id="a5295-112">Widening and Narrowing Conversions</span></span>](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
