--- a/docs/visual-basic/misc/bc40034.md
+++ b/docs/visual-basic/misc/bc40034.md
@@ -1,5 +1,5 @@
 ---
-title: Il membro 'MustOverride' non conforme a CLS non è consentito in un conforme a CLS <classname>
+title: Il membro 'Mustoverride' non conforme a CLS non è consentito in una  conforme a CLS<classname>
 ms.date: 07/20/2015
 f1_keywords:
 - bc40034
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - BC40034
 ms.assetid: 4eb36b3a-1bbe-4e99-9ecb-a12b8729b128
-ms.openlocfilehash: a9c26d5c959066499f940483634867d41ca970bd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d5b570ec2aee1bf95d1aed62fbac24d3fa00d7e9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624373"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384222"
 ---
-# <a name="non-cls-compliant-mustoverride-member-is-not-allowed-in-a-cls-compliant-classname"></a><span data-ttu-id="b5471-102">Il membro 'MustOverride' non conforme a CLS non è consentito in un conforme a CLS \<classname ></span><span class="sxs-lookup"><span data-stu-id="b5471-102">Non-CLS-compliant 'MustOverride' member is not allowed in a CLS-compliant \<classname></span></span>
-<span data-ttu-id="b5471-103">Un classe è contrassegnata come `<CLSCompliant(True)>`, ma contiene una proprietà o routine `MustOverride` che è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.</span><span class="sxs-lookup"><span data-stu-id="b5471-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
+# <a name="non-cls-compliant-mustoverride-member-is-not-allowed-in-a-cls-compliant-classname"></a><span data-ttu-id="3b13e-102">Il membro 'Mustoverride' non conforme a CLS non è consentito in una  conforme a CLS\<classname></span><span class="sxs-lookup"><span data-stu-id="3b13e-102">Non-CLS-compliant 'MustOverride' member is not allowed in a CLS-compliant \<classname></span></span>
+<span data-ttu-id="3b13e-103">Un classe è contrassegnata come `<CLSCompliant(True)>`, ma contiene una proprietà o routine `MustOverride` che è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.</span><span class="sxs-lookup"><span data-stu-id="3b13e-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
   
- <span data-ttu-id="b5471-104">Quando una classe è conforme con la [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), un'applicazione che usa quella classe accede soltanto ai membri che sono contrassegnati anche come `<CLSCompliant(True)>` e ignora i membri che non sono.</span><span class="sxs-lookup"><span data-stu-id="b5471-104">When a class is compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="b5471-105">Tuttavia, l'applicazione non può ignorare una proprietà o routine `MustOverride` perché deve accedervi per eseguirne l'override.</span><span class="sxs-lookup"><span data-stu-id="b5471-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
+ <span data-ttu-id="3b13e-104">Quando una classe è conforme all'indipendenza del linguaggio e a CLS ( [Language-independent Components](../../standard/language-independence-and-language-independent-components.md) ), un'applicazione che utilizza tale classe accede solo ai membri che sono anche contrassegnati come `<CLSCompliant(True)>` e ignora i membri che non lo sono.</span><span class="sxs-lookup"><span data-stu-id="3b13e-104">When a class is compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="3b13e-105">Tuttavia, l'applicazione non può ignorare una proprietà o routine `MustOverride` perché deve accedervi per eseguirne l'override.</span><span class="sxs-lookup"><span data-stu-id="3b13e-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
   
- <span data-ttu-id="b5471-106">Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="b5471-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="b5471-107">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="b5471-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="3b13e-106">Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="3b13e-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="3b13e-107">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="3b13e-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="b5471-108">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="b5471-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="3b13e-108">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="3b13e-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="b5471-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="b5471-109">By default, this message is a warning.</span></span> <span data-ttu-id="b5471-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="b5471-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="3b13e-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="3b13e-109">By default, this message is a warning.</span></span> <span data-ttu-id="3b13e-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="3b13e-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="b5471-111">**ID errore:** BC40034</span><span class="sxs-lookup"><span data-stu-id="b5471-111">**Error ID:** BC40034</span></span>  
+ <span data-ttu-id="3b13e-111">**ID errore:** BC40034</span><span class="sxs-lookup"><span data-stu-id="3b13e-111">**Error ID:** BC40034</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b5471-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b5471-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3b13e-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3b13e-112">To correct this error</span></span>  
   
-- <span data-ttu-id="b5471-113">Se è richiesta la conformità con CLS ed è possibile accedere al codice sorgente della classe, contrassegnare il membro come `<CLSCompliant(True)>`.</span><span class="sxs-lookup"><span data-stu-id="b5471-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
+- <span data-ttu-id="3b13e-113">Se è richiesta la conformità con CLS ed è possibile accedere al codice sorgente della classe, contrassegnare il membro come `<CLSCompliant(True)>`.</span><span class="sxs-lookup"><span data-stu-id="3b13e-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
   
-- <span data-ttu-id="b5471-114">Se è richiesta la compatibilità con CLS e non è possibile accedere al codice sorgente della classe o se esso non può essere conforme, definire il membro all'interno di una classe differente.</span><span class="sxs-lookup"><span data-stu-id="b5471-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
+- <span data-ttu-id="3b13e-114">Se è richiesta la compatibilità con CLS e non è possibile accedere al codice sorgente della classe o se esso non può essere conforme, definire il membro all'interno di una classe differente.</span><span class="sxs-lookup"><span data-stu-id="3b13e-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
   
-- <span data-ttu-id="b5471-115">Se è richiesto che il membro rimanga non conforme, rimuovere la parola chiave `MustOverride` dalla relativa definizione, rimuovere l'oggetto <xref:System.CLSCompliantAttribute> dalla definizione di classe o contrassegnare la classe come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="b5471-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
+- <span data-ttu-id="3b13e-115">Se è richiesto che il membro rimanga non conforme, rimuovere la parola chiave `MustOverride` dalla relativa definizione, rimuovere l'oggetto <xref:System.CLSCompliantAttribute> dalla definizione di classe o contrassegnare la classe come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="3b13e-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b5471-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b5471-116">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3b13e-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3b13e-116">See also</span></span>
 
-- [<span data-ttu-id="b5471-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="b5471-117">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
+- [<span data-ttu-id="3b13e-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="3b13e-117">MustOverride</span></span>](../language-reference/modifiers/mustoverride.md)
